@@ -278,8 +278,12 @@ function initModules(pCallBack){
                         var m       = lModule[lProp].length,
                             lMod    = lModule[lProp];
                         
-                        for(var j = 0; j < m; j++)
-                            lLoad(lMod[j].name, lStorage + '/' + lMod[j].path);
+                        for(var j = 0; j < m; j++){
+                            var lName = lMod[j],
+                                lPath = lStorage + '/_' + lName.toLowerCase();
+                            
+                            lLoad(lName, lPath);
+                        }
                         
                         break;
                     }
