@@ -50,11 +50,7 @@ var CloudCommander, Util, DOM, $;
                     break;
             }
             
-            lItems              = lItems || [];
-            UploadToItemNames   = [];
-            
-            for(i = 0, n = lItems.length; i < n; i++)
-                UploadToItemNames[i] = lItems[i].name;
+            UploadToItemNames   = lItems || [];
             
             Util.exec(pCallBack);
         });
