@@ -93,6 +93,8 @@ clicked on menu item.
 
 * Added functions DOM.parseJSON and DOM.stringifyJSON
 
+* Improved modules.json.
+
 
 2012.12.12, Version 0.1.8
 
